--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Assesment 1 PBAW</title>
+</head>
+<body>
+<h1>Muhammad Firmanullah</h1>
+  <h1>6701190105</h1>
+  <h1>Kota Cilegon</h1>
+  <h1>SMA Ibad Ar-Rahman</h1>
+  <h1>3,2</h1>
+  <table>
+    <tr>
+      <td>
+</body>
+</html>
