--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Assesment 1 PBAW</title>
 </head>
 <body>
-<h1>Muhammad Firmanullah</h1>
-  <h1>6701190105</h1>
-  <h1>Kota Cilegon</h1>
-  <h1>SMA Ibad Ar-Rahman</h1>
-  <h1>3,2</h1>
-  <table>
+
+<table>
     <tr>
-      <td>
-       <td>
+        <td>Muhammad Firmanullah</td>
+        <td>6701190105</td>
+        <td>Kota Cilegon</td>
+        <td>SMA Ibad Ar-Rahman</td>
+        <td>IPK : 3,2</td>
+        <td>Bu Ir. Ely Rosely M.B.S</td>
 </body>
 </html>
